# simple_logger

./: .gitignore  CMakeLists.txt  README.md
src/: LogFormat.cpp  LogFormat.h  Logger.cpp  Logger.h  LoggerError.h  logger_tests.cpp
